# didactic-funicular

./: Cargo.toml  README.md
examples/: aaa.rs  btree-all.rs  btree-create.rs  btree-query.rs  simple-page-range.rs  simple-table-all.rs  simple-table-create.rs  simple-table-exact.rs  simple-table-plan.rs  simple-table-scan.rs  table-create.rs  table-index.rs  table-large.rs
src/: buffer.rs  disk.rs  lib.rs  main.rs  query.rs
