[package]
name = "didactic-funicular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
zerocopy = "0.6"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"
sqlparser = "0.15.0"

[dev-dependencies]
sha-1 = "0.9"
md-5 = "0.9"
